Fix in ForecastWindServiceTest